Add ToDoList Component with TypeScript

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,13 @@ h1 {
   line-height: 1.1;
 }
 
+input{
+  border-radius: 3px;
+  border: 1px solid black;
+  padding: 0.6em 1.2em;
+  margin-right: 1em;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
